# tams_ur5_setup

./: LICENSE  README.md
camera_positioner/: CMakeLists.txt  package.xml
camera_positioner/launch/: camera_positioner.launch
camera_positioner/src/: camera_positioner.cpp
tams_ur5_description/: CMakeLists.txt  package.xml
tams_ur5_description/config/: ur5_ur_modern_driver_ros_control.yaml
tams_ur5_description/config/joint_ranges/: default.yaml  default_up.yaml  elbow_up.yaml  restricted.yaml  restricted_unrestricted_w3.yaml
tams_ur5_description/launch/: tams_ur5_upload.launch
tams_ur5_description/meshes/ur5/collision/: holder.STL  r200.STL
tams_ur5_description/meshes/ur5/visual/: holder.STL  r200.STL
tams_ur5_description/urdf/: arm.urdf.xacro  ft_adapter.urdf.xacro  mounted_camera.urdf.xacro  plug_collision_model.urdf.xacro  s_model_adapter.urdf.xacro  ur5.urdf.xacro
tams_ur5_setup/: CMakeLists.txt  package.xml
tams_ur5_setup_bringup/: CMakeLists.txt  package.xml
tams_ur5_setup_bringup/config/apriltag/: settings.yaml  tags.yaml
tams_ur5_setup_bringup/config/apriltags2/: tags.yaml
tams_ur5_setup_bringup/config/kinect2_calib/007030461647/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
tams_ur5_setup_bringup/launch/: apriltag.launch  apriltags2.launch  azure_kinect.launch  camera.launch  kinect.launch  kinect2.launch  kinect2_table.launch  mechmind.launch  tams_ur5_bringup.launch  tams_ur5_setup.launch  tams_ur5_setup_floor_camera.launch  tams_ur5_setup_floor_kinect.launch  tams_ur5_setup_floor_kinect2.launch  tams_ur5_setup_floor_kinect2_table.launch  tams_ur5_setup_ur_robot_driver.launch  ur_control.launch  xtion.launch
tams_ur5_setup_description/: CMakeLists.txt  package.xml
tams_ur5_setup_description/config/: tams_ur5_calibration.yaml  ur5_controllers.yaml
tams_ur5_setup_description/launch/: tams_ur5_setup_upload.launch
tams_ur5_setup_description/urdf/: table.urdf.xacro  tams_corner.urdf.xacro  tams_corner_with_phasespace.xacro  tams_ur5_setup.urdf.xacro
tams_ur5_setup_description/urdf/upstream/: readme.md
tams_ur5_setup_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
tams_ur5_setup_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  tams_ur5_setup.srdf  tams_ur5_setup_with_r200.srdf
tams_ur5_setup_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  tams_ur5_setup_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
