<?xml version="1.0"?>
<package>
  <name>camera_positioner</name>
  <version>0.0.0</version>
  <description>Estimate a camera's position based on a detected Apriltag</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>
  <author email="goerner@informatik.uni-hamburg.de">Michael Goerner</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>apriltags_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>apriltags_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
