<?xml version="1.0"?>
<package>
  <name>tams_ur5_setup_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for TAMS' UR5 laboratory setup</description>

  <maintainer email="goerner@iformatik.uni-hamburg.de">Michael Goerner</maintainer>
  <author email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</author>  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>apriltags2_ros</run_depend>
  <run_depend>camera_positioner</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>tams_ur5_bringup</run_depend>
  <run_depend>tams_ur5_setup_description</run_depend>
</package>
